[package]
name = "cooplan-amqp-api"
version = "0.11.2"
edition = "2021"
description = "Easily create APIs that rely on the AMQP protocol by using lapin.rs"
license = "MIT"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]

# Proprietary dependencies
cooplan-lapin-wrapper = "0.5.0"
cooplan-state-tracker = "0.2.0"
cooplan-amqp-api-shared = "0.1.0"

# Third party dependencies
serde = { version = "1.0.141", features = ["derive"] }
serde_json = "1.0.82"

log = "0.4.17"

# Async runtime
tokio = { version = "1", features = ["full"] }

# JWT
jsonwebtoken = "8"

# AMQP
futures-util = "0.3.24"
lapin = "2.1"

# Async
tokio-executor-trait = "2.1"
tokio-reactor-trait = "1.1"

async-channel = "1.8.0"
async-trait = "0.1.58"

# HTTP
reqwest = { version = "0.11", features = ["json"] }

[dependencies.uuid]
version = "1.1.2"
features = [
    "v4", # Lets you generate random UUIDs
    "fast-rng", # Use a faster (but still sufficiently random) RNG
    "macro-diagnostics", # Enable better diagnostics for compile-time UUIDs
]